Add Python requirements.txt and update README
Co-authored-by: sburdges-eng <244645803+sburdges-eng@users.noreply.github.com>